# test-catch2-cmake

./: .gitignore  CLAUDE.md  CMakeLists.txt  MAINTENANCE.md  README.md  test.cpp
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  version-check.yml
scripts/: README.md  check-homebrew-formulas.sh  check-latest-versions.sh  latest-versions.txt  update-versions.sh
